# content

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CALIBRATION_MATRIX.txt  CLAUDE.md  ContinuityViewer.swift  DECISIONS.md  HANDOFF.md  MacStudio  MacStudio.swift  OPERATIONS.md  Pulid.json  RAILWAY_GUIDE.md  README.md  STATE.md  cat_list.txt  character_manager.py  characters.json  chief_director.py  cinema_pipeline.py  cleanup.py  coherence_analyzer.py  comfyui_workflow_gen.py  continuity_engine.py  cost_tracker.py  dialogue_writer.py  experiments.db  face_validator_gate.py  generate_characters.py  hedra_native.py  identity_types.py  identity_validator.py  kling_native.py  lip_sync.py  llm_ensemble.py  llm_router.py  location_manager.py  ltx_native.py  main.py  (+50 more)
.claude/: settings.json
.codex/: hooks.json
.github/: pull_request_template.md
.serena/: project.yml
audio/: __init__.py  _client.py  alignment.py  dialogue.py  effects.py  foley.py  music.py  srt.py  voiceover.py
cinema/: __init__.py  aspect.py  auto_approve.py  capability_scorecard.py  checkpoint.py  context.py  core.py  fal_limits.py  lifecycle.py  logging_config.py  pipeline.py  runstate.py  screening.py  services.py
config/: __init__.py  settings.py
content_cinema_pipeline.egg-info/: PKG-INFO  SOURCES.txt
coordination/: README.md
design/: directors-console.html  index.html
docs/: AUDIT-2026-06-13.md  AUDIT-P3-1-concurrency-2026-05-24.md  AUDIT-hook-script-v2-2026-05-24.md  B-003-design-exploration.md  BACKLOG.md  BRIEF-B-006-broad-B-web_server-mutator-migration-2026-05-27.md  BRIEF-comprehensive-test-2026-05-27.md  BRIEF-comprehensive-test-v2-SCAFFOLD-2026-05-28.md  BRIEF-comprehensive-test-v2.0-2026-05-28.md  BRIEF-director-2026-06-17-identity-arcface-embselect.md  BRIEF-director2-2026-06-13-PM-W1-dispositions.md  BRIEF-director2-2026-06-13-PM7-verify-lock-dispatch-dispositions.md  BRIEF-director2-2026-06-13-landscape-char-routing-rule23-joint.md  BRIEF-director2-2026-06-16-checkpoint-cluster.md  BRIEF-director2-2026-06-16-lipsync-precheck-cascade-gap.md  BRIEF-director2-2026-06-16-perf-phase-no-gate.md  BRIEF-operator-validation-2026-05-26.md  BRIEF-tier-d-validation-2026-05-28.md  CINEMA_PIPELINE_MIGRATION_DESIGN.md  CODEBASE_DUMP.md  CONTRACTS.md  CYCLE-16-CLOSING-REPORT-2026-05-27.md  DRAFT-v5.7-phase1-implementation-2026-05-30.md  EXTENSIVE-TEST-PLAN-2026-05-27.md  HANDOFF-2026-06-20-session-wrap-adr033-shipped-ci-gate-restored.md  HANDOFF-codex-2026-06-16-agent-transplant-harness-unification.md  HANDOFF-coordinator-2026-06-13.md  HANDOFF-coordinator-2026-06-14-s4-audit-finalize-reload-monitor.md  HANDOFF-coordinator-2026-06-14-s5-nangate-surge-oversight.md  HANDOFF-coordinator-2026-06-14-s7-phase0-executed-inventory-live-23-pins.md  HANDOFF-coordinator-2026-06-14-s8-wave1-7of8-verified-4-seat-skills-shipped.md  HANDOFF-coordinator-2026-06-14-s9-wave1-MET-8of8-pushed-wave2-seeded.md  HANDOFF-coordinator-2026-06-15-codex-noop-reconcile.md  HANDOFF-coordinator-2026-06-15-multi-subagent-lipsync-reconcile.md  HANDOFF-coordinator-2026-06-15-s10-wave2-opened-2crit-verified-adr024-n1.md  HANDOFF-coordinator-2026-06-15-s11-wave2-2-criticals-independently-confirmed.md  HANDOFF-coordinator-2026-06-15-s12-rca-adr027-gate-circularity-wave2-progress.md  HANDOFF-coordinator-2026-06-15-subagent-adoption-wave2.md  (+331 more)
(+3262 files in other folders)
