[project]
name = "content-cinema-pipeline"
description = "Interactive AI cinema pipeline — topic to 1–2 minute cinematic short with operator review gates, identity validation, and motion-quality scoring."
requires-python = ">=3.11"
dynamic = ["version", "dependencies"]
readme = "README.md"

# Pinned runtime deps live in requirements.txt. pyproject.toml here is
# primarily for declaring the Python floor so a stale venv (e.g., 3.9) fails
# fast with a clear ImportError instead of mysterious `unsupported operand
# type(s) for |: 'type' and 'NoneType'` errors inside vbench_evaluator,
# ltx_native, kling_native, etc. — all of which use PEP 604 `X | None`
# union syntax that requires Python 3.10+.
#
# To bootstrap on macOS:
#   brew install python@3.13
#   /opt/homebrew/bin/python3.13 -m venv .venv
#   .venv/bin/pip install --upgrade pip
#   .venv/bin/pip install -r requirements.txt

[tool.pytest.ini_options]
# Root modules (cost_tracker, workflow_selector, …) are imported bare by the
# test suite. `python -m pytest` puts CWD on sys.path implicitly; bare
# `pytest` (what CI runs) does NOT — without this line collection dies with
# ModuleNotFoundError before a single test runs (NF-1 in
# docs/STRATEGIC_REVIEW-2026-06-10.md: 0 green CI runs in 289).
# tests/conftest.py's autouse sys.path fixture runs after collection — too late.
pythonpath = ["."]
# Scope collection to tests/ so a bare `pytest` / `--collect-only` doesn't recurse
# into scripts/ — several ad-hoc harness scripts there (e.g. scripts/_hedra_test.py,
# scripts/_lipsync_gen_test.py) read `.env` at import time and error collection when
# no .env exists. CI already passes an explicit `tests/unit/` path (which overrides
# this), so this only fixes the unscoped local run. No real tests live outside tests/.
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This repo is run-from-source, not installable. The metadata above exists
# only to pin the Python floor and document venv recreation steps.
py-modules = []
